samples/_failures_safe/1761410200_f1fe0c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a27022a.c:158:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  158 | void parser_advance
      | ^~~~
